feat: refactor Collector to fluent API with conditional batch operations
- Refactor Collector interface to fluent method-chaining API
- Add conditional batch update/delete operations (updateWhere, deleteWhere)
- Add DeleteWhereStep and UpdateWhereStep interfaces
- Replace PageCollector with SliceBuilder for pagination
- Update documentation and examples for new API
- Add comprehensive test coverage for new features